@@ -1,6 +1,8 @@
 Change history
 --------------
 
+- BaseControllerTest supports the ContextInitializer delegate, which makes it easier to modify the MockRailsEngineContext
+
 Release Candidate 3
 ===================
 
